==> tchnit/PN532-ESP-IDF/pn532/pn532.c <==
#include "pn532.h"
#define PN532_PACKBUFFSIZ 64                ///< Packet buffer size in uint8_ts

uint8_t mifareclassic_WriteDataBlock(uint8_t blockNumber,
                                                     uint8_t *data) {
#ifdef MIFAREDEBUG
  print(F("Trying to write 16 bytes to block "));
  println(blockNumber);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1;                /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_WRITE; /* Mifare Write command = 0xA0 */
  pn532_packetbuffer[3] =
      blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */
  memcpy(pn532_packetbuffer + 4, data, 16); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 20)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  return 1;
}

uint8_t mifareultralight_WritePage(uint8_t page,
                                                   uint8_t *data) {

  if (page >= 64) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Trying to write 4 byte page"));
  println(page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] =
      MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page;    /* Page Number (0..63 for most cases) */
  memcpy(pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 8)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}

uint8_t ntag2xx_WritePage(uint8_t page, uint8_t *data) {
  // TAG Type       PAGES   USER START    USER STOP
  // --------       -----   ----------    ---------
  // NTAG 203       42      4             39
  // NTAG 213       45      4             39
  // NTAG 215       135     4             129
  // NTAG 216       231     4             225

  if ((page < 4) || (page > 225)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Trying to write 4 byte page"));
  println(page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] =
      MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page;    /* Page Number (0..63 for most cases) */
  memcpy(pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 8)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}

void readdata(uint8_t *buff, uint8_t len) {
    // readBytes(buff, n);
  // uart_read_bytes(UART_NUM,&buff, len,portMAX_DELAY);
  // pn532_read(buff,len);
    uart_read_bytes(UART_NUM_P2,buff, len,portMAX_DELAY);

  
#ifdef PN532DEBUG
  print(F("Reading: "));
  for (uint8_t i = 0; i < n; i++) {
    print(F(" 0x"));
    print(buff[i], HEX);
  }
  println();
#endif
}

void writecommand(uint8_t *cmd, uint8_t cmdlen) {
    // I2C or Serial command write.
    uint8_t packet[8 + cmdlen];
    uint8_t LEN = cmdlen + 1;

    packet[0] = PN532_PREAMBLE;
    packet[1] = PN532_STARTCODE1;
    packet[2] = PN532_STARTCODE2;
    packet[3] = LEN;
    packet[4] = ~LEN + 1;
    packet[5] = PN532_HOSTTOPN532;
    uint8_t sum = 0;
    for (uint8_t i = 0; i < cmdlen; i++) {
      packet[6 + i] = cmd[i];
      sum += cmd[i];
    }
    packet[6 + cmdlen] = ~(PN532_HOSTTOPN532 + sum) + 1;
    packet[7 + cmdlen] = PN532_POSTAMBLE;

// #ifdef PN532DEBUG
    printf("Sending : ");
    for (int i = 1; i < 8 + cmdlen; i++) {
      printf("0x");
      printf("%u",packet[i]);
      printf(", ");
    }
    printf("\n");
// #endif

  // int len = pn532_write(packet, 8 + cmdlen);
  int len = uart_write_bytes(UART_NUM_P2, (const char*)packet, 8+cmdlen);
  if (len == 8 + cmdlen) {
        ESP_LOGI("UART", "pn532_write");
    } else {
        ESP_LOGE("ERROR", "pn532_write");
    }
  
}
